<resources>
    <string name="app_name">SampleModuleApp</string>

    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="register">Register</string>
    <string name="register_cap">REGISTER</string>
    <string name="get_start">GET START</string>
    <string name="retype_your_password">Re-type your password</string>

    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>
</resources>
