<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_email"
        android:layout_centerVertical="true"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:layout_below="@+id/email_input"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/forgot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:text="@string/forgot"
        android:textSize="17sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/text_button_color"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_below="@+id/forgot_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_button_primary"
        android:textColor="@color/button_text"
        android:layout_marginTop="30dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="@string/register"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/text_button_color"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>