<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="email:"
        android:textSize="13dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_label"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="password:"
        android:textSize="13dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/password_again_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="re-enter password:"
        android:textSize="13dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_again_label"
        android:background="@drawable/edit_text_background"
        android:hint="@string/retype_your_password"
        android:inputType="textPassword"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_button_primary"
        android:textColor="@color/button_text"
        android:layout_marginBottom="30dp"
        android:text="@string/register_cap"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>